<?xml version="1.0"?>
<?model_implied_schema xmlns:model="http://download.ros.org/schema/model/1.0" ?>
<package format="3">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>URDF and Xacro description package for a two-wheeled mobile robot.</description>
  <maintainer email="youssef@example.com">Youssef</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>